<resources>
    <string name="app_name">有缘网</string>

    <string name="tab_home_text">动态</string>
    <string name="tab_discover_text">发现</string>
    <string name="tab_feed_text">信箱</string>
    <string name="tab_me_text">我的</string>
    <string name="guanzhu">关注</string>
    <string name="remen">热门</string>


    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="xin">新用户注册</string>
    <string name="zhuce">注册成功后，性别不可以更改</string>
    <string name="sure">确定</string>
    <string name="userLogin">用户登录</string>
    <string name="phone">手机号</string>
    <string name="pwssword">密码</string>
    <string name="phones">手机号</string>
    <string name="yanZhengMa">验证码</string>
    <string name="kuaiJie">手机号快捷登录</string>
    <string name="shuRu">输入你的手机号</string>
    <string name="huoQu">获取验证码</string>
    <string name="baoHu">手机号仅用于登录和保护账号</string>
    <string name="save">保存</string>
    <string name="geXing">自我描述</string>
    <string name="daZhaoHu">❤打招呼</string>
    <string name="send">发送❤消息</string>
    <string name="sendText">发送</string>
    <string name="skeap">按住 说话</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
