<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bwie.chitchat.activitys.LoginActivity">

    <include layout="@layout/select_shou_ye"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userLogin"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:padding="30dp"/>

    <EditText
        android:id="@+id/login_phone"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:maxLength="11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/phone"
        android:theme="@style/MyEditText"
        />
    <EditText
        android:id="@+id/login_pws"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/pwssword"
        android:password="true"
        android:theme="@style/MyEditText"
        />
    <Button
        android:id="@+id/login_btn"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/write"
        android:background="@drawable/radio_sure02"/>
    <TextView
        android:textColor="@color/huiSe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/kuaiJie"
        />
</LinearLayout>
